<resources>
    <string name="app_name">Comalat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="webview_title">Comalat :: Adaptive Language Training</string>
    <string name="url">http://141.99.248.86:8089/direct/</string>
    <string name="help_url">"http://141.99.248.86:8089/portal/help/main"</string>
    <string name="portal">"http://141.99.248.86:8089/portal/"</string>
    <string name="portal_site">"http://141.99.248.86:8089/portal/site/"</string>
    <string name="comalat_guide_tool_postfix">"/tool/"</string>
    <string name="message_of_the_day">Message Of The Day</string>
    <string name="motd">New COMALAT Language Training Courses available! Search for the Joinable Site in the Membership Area.</string>
    <string name="welcome_title">Welcome!</string>
    <string name="welcome_message">
        <![CDATA[The COMALAT System is a flexible, web-based platform and application for mobile devices for teaching and learning language skills. The system offers German, English and Spanish learning materials to all EU citizens as Open Educational Resource (OER). COMALAT provides adaptability, i.e. it adapts to the needs and interests of users. The strengths and weaknesses, as well as the learning objectives of each user are taken into account during the learning process.]]>
    </string>
    <string name="about_sakai_title">About COMALAT</string>
    <string name="about_sakai_message">
        <![CDATA[<p><b>Project name: </b>Competence Oriented Multilingual Adaptive Language Assessment and Training System </p>
<p><b>Project acronym: </b>COMALAT</p>
<p><b>Project duration: </b>September 1, 2014 - August 31, 2017</p>
<p><b>Project program: </b>Erasmus +, Key Action 2 Strategic Partnerships</p>
<p><b>Project reference: </b>2014-1-DE02-KA200-001589</p>
<p><b>Project objective</b></p>
<p>The aim of the COMALAT project is to develop a language training platform, which is able to adapt to the needs of the learner. The learning platform provides language skills and job-oriented skills through customized learning materials that are tailored to the individual interests, strengths and weaknesses of the learner within the learning progress.</p>
<p><b>Project partners</b></p>
<p>Institute of Practical Informatics, University of Siegen(Coordinator)</p>
<p>Institute of Knowledge Based Systems and Knowledge Management, University of Siegen</p>
<p>Aristotle University of Thessaloniki (AUTH)</p>
<p>Language Centre, University of Alicante</p>]]>
    </string>
    <string name="features_title">Capabilities</string>
    <string name="features_comalat">COMALAT is based on the open source Sakai learning management system.</string>
    <string name="features_capabilities">Sakai offers a variety of capabilities for use in course and project sites, including:</string>
    <string name="home_capabilities">View recent announcements, discussions, and chat activity</string>
    <string name="announcements_capabilities">Post current, time-critical information</string>
    <string name="assignments_capabilities">Post assignments and receive submissions online</string>
    <string name="basiclti">Basiclti</string>
    <string name="basiclti_capabilities">Launch and exchange information with externally-hosted tools</string>
    <string name="chat_room_capabilities">Participate in real-time, written conversations</string>
    <string name="drop_box_capabilities">Allow private file-sharing between instructors and students</string>
    <string name="entity_broker">Entity Broker</string>
    <string name="entity_broker_capabilities">Provides a set of RESTful APIs that support interoperability between Sakai tools.</string>
    <string name="email_archive_capabilities">Maintain an archive of all email sent to the worksite\'s email list</string>
    <string name="gradebook_capabilities">Compute and store grades</string>
    <string name="help_capabilities">Access help documentation</string>
    <string name="lessons_capabilities">
        Can organize the course by unit, module, week, topic, or any other grouping the instructor creates. Lessons leverages the power of other Sakai tools like Assignments,
        and Test and Quizzes.
    </string>
    <string name="membership_capabilities">Choose sites in which you would like to participate</string>
    <string name="messages_and_forums">Messages and\nForums</string>
    <string name="messages_and_forums_capabilities">Create discussion forums and communicate between site groups and users using internal mail.</string>
    <string name="news_capabilities">Display an RSS feed from an external site</string>
    <string name="podcasts_capabilities">View podcasts</string>
    <string name="polls_capabilities">Create site-based surveys and polls</string>
    <string name="portofolios">Portfolios</string>
    <string name="portofolios_capabilities">Supports portfolio-based activities with a suite of tools.</string>
    <string name="postem_capabilities">Provides functionality for uploading .csv formatted files to display feedback (e.g., comments, grades) to site participants.</string>
    <string name="preferences_capabilities">Set your personal preferences, such as time zone, tab order</string>
    <string name="profile_capabilities">Provides a Facebook-style interface for editing user profiles; includes Twitter integration</string>
    <string name="quartz_scheduler">Quartz\nScheduler</string>
    <string name="quartz_scheduler_capabilities">Schedule and run cron jobs</string>
    <string name="resources_capabilities">Add documents and URLs to your worksite</string>
    <string name="roster_capabilities">View list of site participants</string>
    <string name="calendar_capabilities">Keep track of important dates and deadlines on worksite calendar</string>
    <string name="search_capabilities">Provides search capabilities of Sakai content</string>
    <string name="section_info_capabilities">Manage sections or groups within a site</string>
    <string name="shortened_url_service">Shortened URL\nService</string>
    <string name="shortened_url_service_capabilities">
        A simple service that allows tools and services to shorten links to anything, either via the Java-based service or the Entity Provider.
    </string>
    <string name="signup_tool">Signup tool</string>
    <string name="signup_tool_capabilities">Schedule instructor and ta office hours, study groups, and review sessions.</string>
    <string name="site_info_capabilities">View worksite profile and participants list</string>
    <string name="site_stats">Site Stats</string>
    <string name="site_stats_capabilities">View site usage statistics</string>
    <string name="syllabus_capabilities">Create a worksite syllabus</string>
    <string name="test_quizzes_capabilities">Create, administer, and correct tests and quizzes online, and automatically feed the results to the Gradebook</string>
    <string name="web_content_capabilities">Include external website content in your worksite</string>
    <string name="wiki_capabilities">Collaboratively edit simple web pages</string>
    <string name="worksite_setup">Worksite Setup</string>
    <string name="worksite_setup_capabilities">Create and manage sites</string>
    <string name="webservices">Webservices</string>
    <string name="webservices_capabilities">Includes a rich collection of web services for system admins</string>
    <string name="acknowledgements_copyrights">
        <![CDATA[Copyright 2003&#8211;2014 The Apereo Foundation. All rights reserved.<br /><br />Sakai is licensed for use pursuant to the
        <a href="https://opensource.org/licenses/ecl2.php">Educational Community License v. 2.0</a>. Portions of Sakai are copyrighted by other parties, including the parties
        listed below. Please refer to the licenses directory for complete copyright and licensing information.]]>
    </string>
    <string name="welcome">Welcome</string>
    <string name="about">About</string>
    <string name="features">Features</string>
    <string name="training">Training</string>
    <string name="acknowledgements">Acknowledgements</string>
    <string name="help">Help</string>
    <string name="login">Login</string>
    <string name="new_account">New Account</string>
    <string name="other">Other</string>
    <string name="offline_use">Offline Use</string>
</resources>