<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/welcome"
            android:checked="true"
            android:icon="@mipmap/ic_home"
            android:title="@string/welcome" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/about" />
        <item
            android:id="@+id/features"
            android:icon="@drawable/ic_menu_features"
            android:title="@string/features" />
        <item
            android:id="@+id/training"
            android:icon="@drawable/ic_menu_training"
            android:title="@string/training" />
        <item
            android:id="@+id/acknowledgements"
            android:icon="@drawable/ic_menu_acknowledgements"
            android:title="@string/acknowledgements" />
        <item
            android:id="@+id/login"
            android:icon="@mipmap/ic_person"
            android:title="@string/login" />
        <item
            android:id="@+id/new_user"
            android:icon="@drawable/ic_menu_new_user"
            android:title="@string/new_account" />

        <item
            android:id="@+id/offline_use"
            android:icon="@drawable/book_shelf"
            android:title="@string/offline_use" />
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/help"
                android:icon="@mipmap/ic_help"
                android:title="@string/help" />
        </menu>
    </item>

</menu>